# vala-language-server

./: meson.build
src/: meson.build
src/codehelp/: symbolextractor.vala
src/projects/: mesonproject.vala
workarounds/: meson.build  workarounds-spawn-win32.c  workarounds-spawn.c  workarounds.h
